<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/all_layout"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/hello_world"
        android:background="#3399FF"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center" />
    <TextView 
        android:id="@+id/name"
        android:layout_height="50sp"
        android:layout_width="80sp"
        android:layout_below="@id/head"
        android:layout_marginTop="2sp"
        android:text="@string/name"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/enterName"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:layout_marginTop="2sp"
        android:hint="@string/enterName"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        android:layout_toRightOf="@id/name"
        android:layout_toEndOf="@id/name"
        android:layout_below="@id/head"
        android:focusableInTouchMode="true"
        android:focusable="true"/>
    <TextView 
        android:id="@+id/age"
        android:layout_height="50sp"
        android:layout_width="80sp"
        android:layout_below="@id/name"
        android:layout_marginTop="2sp"
        android:text="@string/age"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/enterAge"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:layout_marginTop="2sp"
        android:hint="@string/enterAge"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        android:layout_toRightOf="@id/age"
        android:layout_toEndOf="@id/age"
        android:layout_below="@id/enterName"/>
    <TextView 
        android:id="@+id/height"
        android:layout_height="50sp"
        android:layout_width="80sp"
        android:layout_below="@id/age"
        android:layout_marginTop="2sp"
        android:text="@string/height"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/enterHei"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:layout_marginTop="2sp"
        android:hint="@string/enterHeight"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        android:layout_toRightOf="@id/name"
        android:layout_toEndOf="@id/name"
        android:layout_below="@id/enterAge"/>
    <Button 
        android:id="@+id/add"
        android:layout_height="50sp"
        android:layout_width="90sp"
        android:layout_below="@id/height"
        android:layout_marginTop="2sp"
        android:text="@string/add"
        android:textSize="16sp"/>
    <Button 
        android:id="@+id/showAll"
        android:layout_height="50sp"
        android:layout_width="90sp"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/add"
        android:layout_toEndOf="@id/add"
        android:layout_marginTop="2sp"
        android:text="@string/showAll"
        android:textSize="16sp"/>
    <Button 
        android:id="@+id/clearShow"
        android:layout_height="50sp"
        android:layout_width="90sp"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/showAll"
        android:layout_toEndOf="@id/showAll"
        android:layout_marginTop="2sp"
        android:text="@string/clearShow"
        android:textSize="16sp"/>
    <Button 
        android:id="@+id/deleteAll"
        android:layout_height="50sp"
        android:layout_width="90sp"
        android:layout_below="@id/height"
        android:layout_toRightOf="@id/clearShow"
        android:layout_toEndOf="@id/clearShow"
        android:layout_marginTop="2sp"
        android:text="@string/deleteAll"
        android:textSize="16sp"/>
    <TextView 
        android:id="@+id/Id_id"
        android:layout_height="40sp"
        android:layout_width="80sp"
        android:layout_below="@id/add"
        android:layout_marginTop="2sp"
        android:text="@string/Id"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/enterId"
        android:layout_height="40sp"
        android:layout_width="match_parent"
        android:layout_marginTop="2sp"
        android:hint="@string/enterId"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        android:layout_toRightOf="@id/Id_id"
        android:layout_toEndOf="@id/Id_id"
        android:layout_below="@id/showAll"/>
    <LinearLayout 
        android:id="@+id/area"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:layout_below="@id/enterId"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button 
	        android:id="@+id/ID_Delete"
	        android:layout_height="50sp"
	        android:layout_width="0sp"
	        android:layout_marginTop="2sp"
	        android:layout_weight="1"
	        android:text="@string/ID_Delete"/>
	    <Button 
	        android:id="@+id/ID_Search"
	        android:layout_height="50sp"
	        android:layout_width="0sp"
	        android:layout_marginTop="2sp"
	        android:layout_weight="1"
	        android:text="@string/ID_Search"/>
	    <Button 
	        android:id="@+id/ID_Update"
	        android:layout_height="50sp"
	        android:layout_width="0sp"
	        android:layout_marginTop="2sp"
	        android:layout_weight="1"
	        android:text="@string/ID_Update"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/sql"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/area"
        android:layout_marginTop="2sp"
        android:text="@string/sql"/>
    <TextView 
        android:id="@+id/sqlArea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/sql"
        android:layout_marginTop="2sp"
        android:textColor="#0000FF"
        android:textSize="20sp"/>
    

</RelativeLayout>
